[gd_scene load_steps=21 format=3 uid="uid://bgd1lfvvttvab"]

[ext_resource type="Script" uid="uid://ca72nlefn6fln" path="res://Scripts/Pong/pong_single.gd" id="1_3cl58"]
[ext_resource type="Script" uid="uid://cdptgjin1bsf" path="res://Scripts/Pong/pong_ball.gd" id="2_hktqp"]
[ext_resource type="Texture2D" uid="uid://bk7oafnwv58hl" path="res://Assets/Images/BALL (1).png" id="4_73i25"]
[ext_resource type="Script" uid="uid://b5i751s8ewnll" path="res://Scripts/Pong/pong_player1.gd" id="4_qu5l7"]
[ext_resource type="Texture2D" uid="uid://c63oun3bsk5hq" path="res://Assets/Images/PONGCHARACTER.png" id="5_73i25"]
[ext_resource type="Script" uid="uid://gt5mw526iibh" path="res://Scripts/Pong/pong_aipaddle.gd" id="6_73i25"]
[ext_resource type="Script" uid="uid://80jebwoe0lu4" path="res://Scripts/Game_Whole/global_state.gd" id="7_gns1g"]
[ext_resource type="Texture2D" uid="uid://cuwu8m61x2gjg" path="res://Assets/Images/NEXTGAME.png" id="10_b1ijl"]
[ext_resource type="Texture2D" uid="uid://cmrqjk7wkywsv" path="res://Assets/Images/PLAYAGAIN.png" id="11_v1p2h"]
[ext_resource type="AudioStream" uid="uid://c5ygr4iq448oo" path="res://Assets/Sounds/Pong.wav" id="13_tvpt4"]
[ext_resource type="AudioStream" uid="uid://bv21xifjmy0kr" path="res://Assets/Sounds/bounce.wav" id="16_jues3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3cl58"]
radius = 1.43886

[sub_resource type="AtlasTexture" id="AtlasTexture_gns1g"]
atlas = ExtResource("5_73i25")
region = Rect2(0, 0, 340, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cl58"]
atlas = ExtResource("5_73i25")
region = Rect2(340, 0, 340, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvfo5"]
atlas = ExtResource("5_73i25")
region = Rect2(680, 0, 340, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ijl"]
atlas = ExtResource("5_73i25")
region = Rect2(1020, 0, 340, 350)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvfo5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gns1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cl58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvfo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ijl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_b1ijl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gns1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cl58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvfo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ijl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v1p2h"]
radius = 12.0
height = 166.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_7mycd"]
b = Vector2(0, 1280)

[node name="Main" type="Node2D"]
script = ExtResource("1_3cl58")
metadata/_edit_vertical_guides_ = [270.0]

[node name="Ball" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(365, 783)
scale = Vector2(16, 16)
script = ExtResource("2_hktqp")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
position = Vector2(-0.3125, 3.875)
scale = Vector2(0.035, 0.035)
texture = ExtResource("4_73i25")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(-0.3125, 3.875)
shape = SubResource("CircleShape2D_3cl58")

[node name="Player1" type="CharacterBody2D" parent="." groups=["paddle"]]
position = Vector2(360, 1204)
script = ExtResource("4_qu5l7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player1"]
position = Vector2(-1, 3)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_hvfo5")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Player1"]
position = Vector2(-1, -64)
rotation = 1.5708
polygon = PackedVector2Array(3.0003662, 83.99997, 2.9997559, -84.00003, -7.000244, -83.99997, -12, -11.9999695, -11.999878, 12.0000305, -6.999634, 84.00003)

[node name="AIPaddle" type="CharacterBody2D" parent="." groups=["paddle"]]
position = Vector2(360, 69)
script = ExtResource("6_73i25")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AIPaddle"]
position = Vector2(-8, 104)
rotation = -3.14159
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_b1ijl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AIPaddle"]
position = Vector2(-8, 168)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_v1p2h")

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["wall"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_7mycd")

[node name="StaticBody2D2" type="StaticBody2D" parent="." groups=["wall"]]
position = Vector2(720, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource("SegmentShape2D_7mycd")

[node name="Globalscript" type="Node" parent="."]
script = ExtResource("7_gns1g")

[node name="InputDelayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CountdownTimer" type="Timer" parent="."]

[node name="Audio_Count" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_tvpt4")
autoplay = true
bus = &"Music"

[node name="bounceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_jues3")
volume_db = -1.0
pitch_scale = 2.0
bus = &"SFX"

[node name="next_game" type="TextureButton" parent="."]
offset_left = 18.0
offset_top = 675.0
offset_right = 703.0
offset_bottom = 789.0
texture_normal = ExtResource("10_b1ijl")

[node name="play_again" type="TextureButton" parent="."]
offset_left = 22.0
offset_top = 658.0
offset_right = 707.0
offset_bottom = 772.0
texture_normal = ExtResource("11_v1p2h")

[node name="Game_Round" type="Label" parent="."]
offset_left = 44.0
offset_top = 245.0
offset_right = 660.0
offset_bottom = 398.0
theme_override_colors/font_color = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_font_sizes/font_size = 112
text = "Catch"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="timeout" from="InputDelayTimer" to="." method="_on_InputDelayTimer_timeout"]
[connection signal="pressed" from="next_game" to="." method="_on_next_game_pressed"]
[connection signal="pressed" from="play_again" to="." method="_on_play_again_pressed"]
